showing role creation stats

--- a/src/main/resources/net/joinedminds/masserr/Messages.properties
+++ b/src/main/resources/net/joinedminds/masserr/Messages.properties
@@ -1,3 +1,9 @@
 nav.Home=Home
 nav.Admin=Admin
 nav.Roles=Roles
+
+vital.Normal=Normal
+vital.Torpor=Torpor
+vital.FinalDeath=Final Death
+vital.Disappeared=Disappeared
+vital.OnLongJourney=On Long Journey
