Create Quick NPC Role

--- a/src/main/resources/net/joinedminds/masserr/Messages.properties
+++ b/src/main/resources/net/joinedminds/masserr/Messages.properties
@@ -7,3 +7,8 @@ vital.Torpor=Torpor
 vital.FinalDeath=Final Death
 vital.Disappeared=Disappeared
 vital.OnLongJourney=On Long Journey
+
+QuickRoles_Msg_NoName_h = No Name
+QuickRoles_Msg_NoName_Msg = You need to provide a name
+QuickRoles_Msg_Embraced_h = Embraced
+QuickRoles_Msg_Embraced_Msg = An Embraced date is required.<br/>Format: YYYY or YYYY-MM or YYYY-MM-DD
