Role and Domain are now access controlled
but no checks yet

--- a/src/main/resources/net/joinedminds/masserr/Messages.properties
+++ b/src/main/resources/net/joinedminds/masserr/Messages.properties
@@ -14,3 +14,18 @@ QuickRoles_Msg_NoName_h = No Name
 QuickRoles_Msg_NoName_Msg = You need to provide a name
 QuickRoles_Msg_Embraced_h = Embraced
 QuickRoles_Msg_Embraced_Msg = An Embraced date is required.<br/>Format: YYYY or YYYY-MM or YYYY-MM-DD
+
+Role.Permission.General=General
+Role.Permission.General.Read=Read
+Role.Permission.General.Administer=Administer
+Role.Permission.General.Administer.Description=General administration tasks like set permissions
+Role.Permission.General.Edit=Edit
+
+Domain.Permission.General=General
+Domain.Permission.General.Administer=Administer
+Domain.Permission.General.Administer.Description=General administration tasks like set permissions
+Domain.Permission.General.EditHistory=Edit History
+Domain.Permission.General.ChangeName=Change Name
+Domain.Permission.Role=Roles
+Domain.Permission.Role.Create=Create Role
+Domain.Permission.Role.List=List Roles
